test: 同步 JDK 8 兼容测试写法（Collections 系列/显式类型），保持三分支同源